sumo/tests/sumo/errors/Makefile.am
SUBDIRS =  unknown_option

EXTRA_DIST =  testsuite.sumo

